@@ -1,3 +1,7 @@
+2017-06-19   Nathan Rossi <nathan@nathanrossi.com>
+	* src/rtld/dl-tls.c, src/rtld/rtld.c: Add definitions/conf to
+		support MicroBlaze, using glibc-2.24 as reference.
+
 2016-08-19   Mark Hatle <mark.hatle@windriver.com>
 	* README, testsuite/reloc8.sh, testsuite/reloc9.sh:
 		update to expand on reloc8 and reloc9 failures
